--- a/WEB-INF/classes/gpt/resources/gpt.properties
+++ b/WEB-INF/classes/gpt/resources/gpt.properties
@@ -4490,3 +4490,72 @@ catalog.mdCode.resourceType.EDG_VIRTUAL_RECORD = Placeholder Record
 catalog.rest.viewParent                         = Parent
 catalog.rest.viewChild                          = Children
 catalog.rest.viewVisualizeCollection            = Visualize Collection
+# v1.2.5 ========================================================================
+catalog.harvest.manage.edit.frequency.periodical=Periodically
+catalog.harvest.manage.edit.frequency.adhoc=At the specified time
+catalog.com.esri.gpt.framework.adhoc.events.SpecTimeEvent=Exactly on {0}
+catalog.com.esri.gpt.framework.adhoc.events.TimeOfTheDayEvent=Every day at {0}
+catalog.com.esri.gpt.framework.adhoc.events.DayOfTheMonthEvent=Every {0} day of the month at {1}
+catalog.com.esri.gpt.framework.adhoc.events.DayOfTheWeekEvent=Every {0} at {1}
+catalog.com.esri.gpt.framework.adhoc.events.DayOfTheWeekInTheMonthEvent=Every {0} {1} of the month at {2}
+catalog.com.esri.gpt.framework.adhoc.events.SUNDAY=Sunday
+catalog.com.esri.gpt.framework.adhoc.events.MONDAY=Monday
+catalog.com.esri.gpt.framework.adhoc.events.TUEASDAY=Tuesday
+catalog.com.esri.gpt.framework.adhoc.events.WEDNESDAY=Wednesday
+catalog.com.esri.gpt.framework.adhoc.events.THURSDAY=Thursday
+catalog.com.esri.gpt.framework.adhoc.events.FRIDAY=Friday
+catalog.com.esri.gpt.framework.adhoc.events.SATURDAY=Saturday
+com.esri.gpt.catalog.harvest.adhoc.timePoints.caption=Time points
+catalog.harvest.manage.timeDialog.caption=Select time
+catalog.harvest.manage.timeDialog.button.close=Close
+catalog.harvest.manage.timeDialog.button.add=Add
+catalog.harvest.manage.timeDialog.timeInput.label=Select time of the day:
+catalog.harvest.manage.timeDialog.timeSpecDate.label=Select specific day or pattern
+catalog.harvest.manage.timeDialog.dateStyle.date.label=Exact day
+catalog.harvest.manage.timeDialog.dateStyle.pattern.label=Pattern
+catalog.harvest.manage.addTime.button=Add time
+catalog.harvest.manage.edit.protocol.ags2agp= AGS-AGP
+catalog.harvest.manage.edit.src.soap=SOAP URL:
+catalog.harvest.manage.edit.src.rest = REST URL:
+catalog.harvest.manage.edit.src.soap.err = Enter valid source SOAP URL.
+catalog.harvest.manage.edit.src.ags2agp.caption = Source ArcGIS Server
+catalog.harvest.manage.edit.example = Example:
+catalog.harvest.manage.edit.protocol.agp2agp= AGP-AGP
+catalog.harvest.manage.edit.protocol.dcat = DCAT
+catalog.harvest.manage.edit.dcat.format = Format:
+catalog.harvest.manage.edit.err.emptyFormat = Empty DCAT format
+catalog.harvest.manage.edit.err.invalidFormat = Invalid DCAT format
+# search link file types:
+catalog.rest.link.addToMap     = Add to Map
+catalog.rest.link.csv          = CSV
+catalog.rest.link.doc          = DOC
+catalog.rest.link.gml          = GML
+catalog.rest.link.json         = JSON
+catalog.rest.link.geojson      = GeoJSON
+catalog.rest.link.getmap       = GetMap
+catalog.rest.link.getcoverage  = GetCoverage
+catalog.rest.link.html         = WWW
+catalog.rest.link.kml          = KML
+catalog.rest.link.pdf          = PDF
+catalog.rest.link.ppt          = PPT
+catalog.rest.link.shp          = SHP
+catalog.rest.link.sos          = SOS
+catalog.rest.link.txt          = TXT
+catalog.rest.link.wms          = WMS
+catalog.rest.link.wfs          = WFS
+catalog.rest.link.wcs          = WCS
+catalog.rest.link.xls          = XLS
+catalog.rest.link.xml          = XML
+catalog.rest.link.zip          = ZIP
+catalog.search.contentDateSearch.WindowTitle       = WHEN
+catalog.search.contentDateSearch.WindowTitleRemark = Click here to enter content date criteria.
+catalog.search.contentDateSearch.anytime           = Anytime
+catalog.search.contentDateSearch.intersecting      = Intersecting
+catalog.search.contentDateSearch.within            = Fully within
+catalog.search.contentDateSearch.startDate         = Start Date:
+catalog.search.contentDateSearch.endDate           = End Date:
+catalog.search.contentDateSearch.datePattern       = (yyyy-mm-dd)
+catalog.search.searchSite.dataGov = Data.gov
+catalog.search.searchSite.dataGov.abstract = Search Data.gov
+catalog.search.searchSite.geoDab = GEO DAB
+catalog.search.searchSite.geoDab.abstract = Search GEO DAB
