--- a/WEB-INF/classes/gpt/resources/gpt.properties
+++ b/WEB-INF/classes/gpt/resources/gpt.properties
@@ -4557,5 +4557,5 @@ catalog.search.contentDateSearch.endDate           = End Date:
 catalog.search.contentDateSearch.datePattern       = (yyyy-mm-dd)
 catalog.search.searchSite.dataGov = Data.gov
 catalog.search.searchSite.dataGov.abstract = Search Data.gov
-catalog.search.searchSite.geoDab = GEO DAB
-catalog.search.searchSite.geoDab.abstract = Search GEO DAB
+catalog.search.searchSite.geoDab = GEOSS Portal
+catalog.search.searchSite.geoDab.abstract = Search GEOSS Portal
