--- a/WEB-INF/classes/gpt/resources/gpt.properties
+++ b/WEB-INF/classes/gpt/resources/gpt.properties
@@ -170,7 +170,7 @@ catalog.search.searchResult.altReview        = {0} up, {1} down
 catalog.search.searchResult.reviewCountLabel = {0}
 catalog.search.searchResult.review0CoutLabel = -
 catalog.search.searchResult.restFrom = https://edg-staging.
-catalog.search.searchResult.restTo = https://edg-intranet.
+catalog.search.searchResult.restTo = http://edg-intranet.
 
 catalog.search.map.findPlace.invalidCoord    = Invalid Coordinates entered
 catalog.search.additionalOptions             = Additional Options
