--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -30,7 +30,7 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
     ............................................ -->
-	<filter>
+    <filter>
         <filter-name>ClickjackFilterDeny</filter-name>
         <filter-class>org.owasp.filters.ClickjackFilter</filter-class>
         <init-param>
@@ -38,7 +38,6 @@
             <param-value>DENY</param-value>
         </init-param>
     </filter>
-    
     <filter>
         <filter-name>ClickjackFilterSameOrigin</filter-name>
         <filter-class>org.owasp.filters.ClickjackFilter</filter-class>
@@ -74,7 +73,7 @@
 	<filter-mapping> 
         <filter-name>ClickjackFilterSameOrigin</filter-name>
         <url-pattern>/*</url-pattern>
-    </filter-mapping>    
+    </filter-mapping>
     <context-param>
         <param-name>javax.faces.CONFIG_FILES</param-name>
         <param-value>/WEB-INF/faces-config.xml, /WEB-INF/gpt-faces-config.xml</param-value>
@@ -117,6 +116,14 @@
             <param-value>2</param-value>
         </init-param>
         <load-on-startup>2</load-on-startup>
+    </servlet>
+    <servlet>
+        <servlet-name>UuidsInSchema</servlet-name>
+        <servlet-class>com.innovateteam.gpt.UuidsInSchema</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>RecordMetrics</servlet-name>
+        <servlet-class>com.innovateteam.gpt.RecordMetrics</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>BrowseOwners</servlet-name>
@@ -473,7 +480,16 @@
       <servlet-name>CartServlet</servlet-name>
       <url-pattern>/cart/*</url-pattern>
     </servlet-mapping>
-	<servlet>
+    <servlet-mapping>
+      <servlet-name>UuidsInSchema</servlet-name>
+      <url-pattern>/UuidsInSchema/*</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+       <servlet-name>RecordMetrics</servlet-name>
+       <url-pattern>/RecordMetrics/*</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
       <servlet-name>DcatCacheServlet</servlet-name>
       <servlet-class>com.esri.gpt.control.georss.DcatCacheServlet</servlet-class>
     </servlet>
